--- a/vol1.html
+++ b/vol1.html
@@ -109,7 +109,7 @@
 
 <header>
   <span class="title">PaleZine - Volume 1</span>
-  <button id="toggleMode" class="btn">Switch to Flip</button>
+  <button id="toggleMode" class="btn">PC Mode</button>
   <a href="booklet.pdf" class="btn" download>Download PDF</a>
   <a href="index.html" class="btn">Back to Volumes</a>
 </header>
@@ -226,6 +226,7 @@ document.getElementById("toggleMode").addEventListener("click", ()=>{
 
 </body>
 </html>
+
 
 
 
