--- a/vol2.html
+++ b/vol2.html
@@ -108,8 +108,8 @@
 
 <header>
   <span class="title">PaleZine - Volume 2</span>
-  <button id="toggleMode" class="btn">Switch to Flip</button>
   <a href="booklet2.pdf" class="btn" download>Download PDF</a>
+  <button id="toggleMode" class="btn">PC Mode</button>
   <a href="index.html" class="btn">Back to Volumes</a>
 </header>
 
@@ -220,6 +220,7 @@ document.getElementById("toggleMode").addEventListener("click", ()=>{
 
 </body>
 </html>
+
 
 
 
