--- a/vol2.html
+++ b/vol2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>PaleZine - Volume 2</title>
+<title>PaleZine – Volume 2</title>
 
 <style>
   * { box-sizing: border-box; }
@@ -107,9 +107,9 @@
 <body>
 
 <header>
-  <span class="title">PaleZine - Volume 2</span>
+  <span class="title">PaleZine — Volume 2</span>
+  <button id="toggleMode" class="btn">Switch to Flip</button>
   <a href="booklet2.pdf" class="btn" download>Download PDF</a>
-  <button id="toggleMode" class="btn">PC Mode</button>
   <a href="index.html" class="btn">Back to Volumes</a>
 </header>
 
@@ -220,6 +220,8 @@ document.getElementById("toggleMode").addEventListener("click", ()=>{
 
 </body>
 </html>
+
+
 
 
 
