favicon + order landapge  index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>PaleZine - Rumman</title>
 
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="favicon.png" />
+
 <style>
   body {
     margin: 0;
@@ -19,8 +22,18 @@
   }
 
   h1 {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     font-size: 2rem;
+  }
+
+  /* Intro section (formerly footer text) */
+  .intro {
+    opacity: .8;
+    font-size: .9rem;
+    text-align: center;
+    max-width: 600px;
+    margin-bottom: 2rem;
+    line-height: 1.4;
   }
 
   .grid {
@@ -47,14 +60,7 @@
     box-shadow: 0 20px 60px rgba(0,0,0,0.6);
   }
 
-  footer {
-    margin-top: 2rem;
-    opacity: .6;
-    font-size: .9rem;
-    text-align: center;
-  }
-
-  /* --- Instagram Link Styling (Option 3) --- */
+  /* Instagram link styling */
   .ig-link {
     color: #ffffff;
     font-family: "Courier New", monospace;
@@ -77,6 +83,12 @@
 
 <h1>PaleZine</h1>
 
+<div class="intro">
+  A poetry Zine of Rumman, thanks to the help of many people.<br><br>
+  To come to the next poetry evening stay updated here:<br>
+  <a class="ig-link" href="https://www.instagram.com/rumman_dd/" target="_blank">@rumman_dd</a> 😉
+</div>
+
 <div class="grid">
 
   <!-- Volume 2 -->
@@ -92,12 +104,6 @@
   </a>
 
 </div>
-
-<footer>
-  A poetry Zine of Rumman, thanks to the help of many people.<br><br>
-  To come to the next poetry evening stay updated here :<br>
-  <a class="ig-link" href="https://www.instagram.com/rumman_dd/" target="_blank">@rumman_dd</a> 😉
-</footer>
 
 </body>
 </html>
@@ -122,8 +128,8 @@
 
 
 
-
   
+
 
 
 
