--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 
 <style>
   body {
-    margin: 0;
-    background: radial-gradient(circle at 20% 20%, #2a2a2a 0%, #000 80%);
-    font-family: system-ui, -apple-system, Inter, sans-serif;
-    color: #fff;
-    min-height: 100vh;
-    padding: 2rem 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+  margin: 0;
+  background: radial-gradient(circle at 20% 20%, #2a2a2a 0%, #000 80%);
+  font-family: system-ui, -apple-system, Inter, sans-serif;
+  color: #fff;
+  min-height: 100vh;
+  padding: 2rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
+  /* Custom Camel Cursor */
+  cursor: url("camel_cursor.svg") 16 16, auto;
+}
   h1 {
     margin-bottom: 1rem;
     font-size: 2rem;
@@ -129,6 +131,7 @@
 
 
   
+
 
 
 
