--- a/vol2.html
+++ b/vol2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>PaleZine – Volume 2</title>
+<title>PaleZine - Volume 2</title>
 
 <style>
   * { box-sizing: border-box; }
@@ -19,7 +19,7 @@
   }
 
   header {
-    position: sticky; top: 0; z-index: 5;
+    position: sticky; top: 0; z-index: 10;
     width: 100%;
     background: rgba(0,0,0,0.6);
     backdrop-filter: blur(6px);
@@ -40,11 +40,13 @@
     cursor: pointer;
     text-decoration: none;
   }
+  .btn:hover { background: rgba(255,255,255,0.1); }
 
   .wrap {
     width: 100%;
     max-width: 900px;
     padding: 1rem;
+    position: relative;
   }
 
   /* Scroll mode */
@@ -58,12 +60,12 @@
     height: auto;
     display: block;
     background: #111;
-    margin: 0 0 .75rem 0;
+    margin-bottom: .75rem;
     border-radius: 10px;
     box-shadow: 0 20px 60px rgba(0,0,0,0.5);
   }
 
-  /* Flipbook */
+  /* Flipbook container */
   #flipbook {
     width: 900px;
     height: 600px;
@@ -79,6 +81,30 @@
     height: 600px;
     background-size: cover;
     background-position: center;
+  }
+
+  /* ⭐ Pre-fold effect for the first page */
+  #flipbook .page:first-child {
+    transform-origin: right top;
+    transform: rotateY(-12deg) translateX(-8px);
+    box-shadow: -20px 0 40px rgba(0,0,0,0.4);
+  }
+
+  /* Flip hint */
+  #flipHint {
+    position: absolute;
+    bottom: 12px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 4px 12px;
+    background: rgba(0,0,0,0.45);
+    border-radius: 6px;
+    font-size: 0.85rem;
+    color: #fff;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity .6s ease;
+    z-index: 20;
   }
 
   footer {
@@ -116,40 +142,50 @@
 <div class="wrap">
   <div id="scrollReader"></div>
   <div id="flipbook"></div>
+
+  <!-- FLIP HINT -->
+  <div id="flipHint">Swipe or drag to flip →</div>
 </div>
 
 <footer>
   If all is black, wait for loading 😉<br><br>
-  Tip: scroll mode is easiest on mobile. You can switch to flip mode anytime.
+  Tip: scroll mode is easiest on mobile.
 </footer>
 
 <script>
 const FOLDER = "pages2/";
 const PREFIX = "booklet2-";
-const SUFFIX = "-1.jpg";
-const MAX_PAGES = 300;
+const PAD = 1; // volume 2 filenames have no leading zeros
+const EXT = ".jpg";
+const MAX_PAGES = 200;
 
 let pageURLs = [];
 let mode = "scroll";
 
+function pad(n){ return String(n).padStart(PAD, "0"); }
+
 function imgExists(url){
-  return new Promise(resolve=>{
+  return new Promise(resolve => {
     const img = new Image();
     img.onload = ()=>resolve(true);
     img.onerror = ()=>resolve(false);
-    img.src = url + (window.location.hostname.endsWith("github.io") ? "" : ("?v=" + Date.now()));
+    img.src = url;
   });
 }
 
 async function discoverPages(){
   const urls = [];
-  for(let i = 1; i < MAX_PAGES; i++){
-    const url = `${FOLDER}${PREFIX}${i}${SUFFIX}`;
-    const ok = await imgExists(url);
-    if(!ok) break;
-    urls.push(url);
+  for(let i=1; i<MAX_PAGES; i++){
+    const url = `${FOLDER}${PREFIX}${i}${EXT}`;
+    if(await imgExists(url)) urls.push(url);
+    else break;
   }
   return urls;
+}
+
+function showHint(show){
+  const hint = document.getElementById("flipHint");
+  hint.style.opacity = show ? 1 : 0;
 }
 
 function mountScroll(){
@@ -165,6 +201,8 @@ function mountScroll(){
 
   scroll.style.display = "block";
   flip.style.display = "none";
+  showHint(false);
+
   mode = "scroll";
   document.getElementById("toggleMode").textContent = "Switch to Flip";
 }
@@ -177,41 +215,54 @@ function mountFlip(){
   flip.innerHTML = "";
 
   pageURLs.forEach(src=>{
-    const div = document.createElement("div");
-    div.className = "page";
-    div.style.backgroundImage = `url('${src}')`;
-    flip.appendChild(div);
+    const d = document.createElement("div");
+    d.className = "page";
+    d.style.backgroundImage = `url('${src}')`;
+    flip.appendChild(d);
   });
 
   flip.style.display = "block";
 
-  const $flip = $("#flipbook");
-  try {
-    if ($flip.data("initialized")) {
-      $flip.turn("destroy");
+  // ⭐ Remove the pre-fold after flipbook becomes active
+  setTimeout(() => {
+    const firstPage = document.querySelector("#flipbook .page:first-child");
+    if (firstPage) {
+      firstPage.style.transform = "";
+      firstPage.style.boxShadow = "";
     }
-  } catch(e){}
+  }, 600);
+
+  // Initialize Flipbook
+  const $f = $("#flipbook");
+  try { if ($f.data("initialized")) $f.turn("destroy"); } catch(e){}
 
   $("#flipbook").turn({
     width: 900,
     height: 600,
     autoCenter: true,
-    display: window.matchMedia('(max-width: 950px)').matches ? "single" : "double"
+    display: window.matchMedia('(max-width:950px)').matches ? "single" : "double",
+    when: {
+      turned: function(e, page){
+        showHint(page === 1);
+      }
+    }
   }).data("initialized", true);
+
+  showHint(true);
 
   mode = "flip";
   document.getElementById("toggleMode").textContent = "Switch to Scroll";
 }
 
 document.getElementById("toggleMode").addEventListener("click", ()=>{
-  if(mode === "scroll") mountFlip(); else mountScroll();
+  if (mode === "scroll") mountFlip();
+  else mountScroll();
 });
 
 (async function init(){
   pageURLs = await discoverPages();
-  if(pageURLs.length === 0){
-    document.querySelector(".wrap").innerHTML =
-      "<div style='color:#ccc;text-align:center;padding:1rem'>No pages found in <code>pages2/</code>.</div>";
+  if (pageURLs.length === 0){
+    document.querySelector(".wrap").innerHTML = "<div style='color:#ccc'>No pages found.</div>";
     return;
   }
   mountScroll(); // default
@@ -220,7 +271,6 @@ document.getElementById("toggleMode").addEventListener("click", ()=>{
 
 </body>
 </html>
-
 
 
 
