--- a/vol1.html
+++ b/vol1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>PaleZine - Volume 1</title>
+<title>PaleZine – Volume 1</title>
 
 <style>
   * { box-sizing: border-box; }
@@ -16,19 +16,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    cursor: url("camel_cursor.svg") 16 16, auto; /* GLOBAL CAMEL CURSOR */
   }
 
   header {
-    position: sticky; top: 0; z-index: 10;
-    width: 100%;
+    position: sticky; top: 0; z-index: 5;
+    width: 100%; padding: .75rem 1rem;
     background: rgba(0,0,0,0.6);
     backdrop-filter: blur(6px);
     border-bottom: 1px solid rgba(255,255,255,0.06);
-    padding: .75rem 1rem;
     display: flex; gap: .75rem; justify-content: center; flex-wrap: wrap;
   }
-
-  .title { font-weight: 600; }
 
   .btn {
     border: 1px solid rgba(255,255,255,0.15);
@@ -37,38 +35,24 @@
     padding: .45rem .7rem;
     border-radius: 8px;
     font-size: .85rem;
-    cursor: pointer;
+    cursor: inherit;
     text-decoration: none;
   }
-  .btn:hover { background: rgba(255,255,255,0.1); }
 
-  .wrap {
-    width: 100%;
-    max-width: 900px;
-    padding: 1rem;
-    position: relative;
-  }
+  .wrap { width: 100%; max-width: 900px; padding: 1rem; }
 
-  /* Scroll mode */
-  #scrollReader {
-    width: 100%;
-    max-width: 900px;
-    display: none;
-  }
+  /* Scroll Mode */
+  #scrollReader { display: none; }
   #scrollReader img {
-    width: 100%;
-    height: auto;
-    display: block;
-    background: #111;
-    margin-bottom: .75rem;
+    width: 100%; height: auto; display: block;
+    background: #111; margin-bottom: .75rem;
     border-radius: 10px;
     box-shadow: 0 20px 60px rgba(0,0,0,0.5);
   }
 
-  /* Flipbook container */
+  /* Flipbook */
   #flipbook {
-    width: 900px;
-    height: 600px;
+    width: 900px; height: 600px;
     background: #1a1a1a;
     border-radius: 12px;
     box-shadow: 0 40px 120px rgba(0,0,0,0.9);
@@ -76,53 +60,34 @@
     display: none;
     margin: 0 auto;
   }
+
   #flipbook .page {
-    width: 450px;
-    height: 600px;
+    width: 450px; height: 600px;
     background-size: cover;
     background-position: center;
   }
 
-  /* ⭐ NEW: Pre-fold effect for the first page */
+  /* ⭐ DOG-EAR FOLD ANIMATION */
   #flipbook .page:first-child {
-    transform-origin: right top;
-    transform: rotateY(-12deg) translateX(-8px);
-    box-shadow: -20px 0 40px rgba(0,0,0,0.4);
+    transform-origin: top right;
+    transform: rotateY(-24deg) translateX(-12px);
+    box-shadow: -30px 0 50px rgba(0,0,0,0.55);
+    animation: dogear 1s ease-out;
   }
 
-  /* Flip hint */
-  #flipHint {
-    position: absolute;
-    bottom: 12px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 4px 12px;
-    background: rgba(0,0,0,0.45);
-    border-radius: 6px;
-    font-size: 0.85rem;
-    color: #fff;
-    pointer-events: none;
-    opacity: 0;
-    transition: opacity .6s ease;
-    z-index: 20;
+  @keyframes dogear {
+    0% { transform: rotateY(-45deg) translateX(-18px); }
+    100% { transform: rotateY(-24deg) translateX(-12px); }
   }
 
   footer {
-    text-align: center;
-    color: #ccc;
-    padding: 2rem 1rem;
-    font-size: .85rem;
+    text-align: center; color: #ccc;
+    padding: 2rem 1rem; font-size: .85rem;
   }
 
   @media (max-width: 950px) {
-    #flipbook {
-      width: 100%;
-      height: calc(100vw * (600/900));
-    }
-    #flipbook .page {
-      width: 50%;
-      height: 100%;
-    }
+    #flipbook { width: 100%; height: calc(100vw * (600/900)); }
+    #flipbook .page { width: 50%; height: 100%; }
   }
 </style>
 
@@ -142,9 +107,6 @@
 <div class="wrap">
   <div id="scrollReader"></div>
   <div id="flipbook"></div>
-
-  <!-- FLIP HINT -->
-  <div id="flipHint">Swipe or drag to flip →</div>
 </div>
 
 <footer>
@@ -162,10 +124,10 @@ const MAX_PAGES = 200;
 let pageURLs = [];
 let mode = "scroll";
 
-function pad(n){ return String(n).padStart(PAD, "0"); }
+function pad(n){ return String(n).padStart(PAD,"0"); }
 
 function imgExists(url){
-  return new Promise(resolve => {
+  return new Promise(resolve=>{
     const img = new Image();
     img.onload = ()=>resolve(true);
     img.onerror = ()=>resolve(false);
@@ -175,106 +137,84 @@ function imgExists(url){
 
 async function discoverPages(){
   const urls = [];
-  for(let i=1; i<MAX_PAGES; i++){
-    const url = `${FOLDER}${PREFIX}${pad(i)}${EXT}`;
+  for(let i=1;i<MAX_PAGES;i++){
+    const url=`${FOLDER}${PREFIX}${pad(i)}${EXT}`;
     if(await imgExists(url)) urls.push(url);
     else break;
   }
   return urls;
 }
 
-function showHint(show){
-  const hint = document.getElementById("flipHint");
-  hint.style.opacity = show ? 1 : 0;
-}
-
 function mountScroll(){
-  const scroll = document.getElementById("scrollReader");
-  const flip = document.getElementById("flipbook");
+  const s=document.getElementById("scrollReader");
+  const f=document.getElementById("flipbook");
 
-  scroll.innerHTML = "";
+  s.innerHTML=""; s.style.display="block"; f.style.display="none";
+
   pageURLs.forEach(src=>{
-    const img = document.createElement("img");
-    img.src = src;
-    scroll.appendChild(img);
+    const img=document.createElement("img");
+    img.src=src;
+    s.appendChild(img);
   });
 
-  scroll.style.display = "block";
-  flip.style.display = "none";
-  showHint(false);
-
-  mode = "scroll";
-  document.getElementById("toggleMode").textContent = "Switch to Flip";
+  mode="scroll";
+  document.getElementById("toggleMode").textContent="Switch to Flip";
 }
 
 function mountFlip(){
-  const scroll = document.getElementById("scrollReader");
-  const flip = document.getElementById("flipbook");
+  const s=document.getElementById("scrollReader");
+  const f=document.getElementById("flipbook");
 
-  scroll.style.display = "none";
-  flip.innerHTML = "";
+  s.style.display="none"; f.innerHTML="";
 
   pageURLs.forEach(src=>{
-    const d = document.createElement("div");
-    d.className = "page";
-    d.style.backgroundImage = `url('${src}')`;
-    flip.appendChild(d);
+    const d=document.createElement("div");
+    d.className="page";
+    d.style.backgroundImage=`url('${src}')`;
+    f.appendChild(d);
   });
 
-  flip.style.display = "block";
+  f.style.display="block";
 
-  // ⭐ Remove pre-fold once turn.js takes over
-  setTimeout(() => {
-    const firstPage = document.querySelector("#flipbook .page:first-child");
-    if (firstPage) {
-      firstPage.style.transform = "";
-      firstPage.style.boxShadow = "";
-    }
-  }, 600);
-
-  // Initialize Flipbook
-  const $f = $("#flipbook");
-  try { if ($f.data("initialized")) $f.turn("destroy"); } catch(e){}
+  const $f=$("#flipbook");
+  try{ if($f.data("initialized")) $f.turn("destroy"); }catch(e){}
 
   $("#flipbook").turn({
-    width: 900,
-    height: 600,
-    autoCenter: true,
-    display: window.matchMedia('(max-width:950px)').matches ? "single" : "double",
-    when: {
-      turned: function(e, page){
-        showHint(page === 1);
-      }
+    width:900, height:600, autoCenter:true,
+    display:window.matchMedia('(max-width:950px)').matches?"single":"double"
+  }).data("initialized",true);
+
+  /* REMOVE dog-ear so normal flipping resumes */
+  setTimeout(()=>{
+    const first=document.querySelector("#flipbook .page:first-child");
+    if(first){
+      first.style.transform="";
+      first.style.boxShadow="";
+      first.style.animation="";
     }
-  }).data("initialized", true);
+  },900);
 
-  showHint(true);
-
-  mode = "flip";
-  document.getElementById("toggleMode").textContent = "Switch to Scroll";
+  mode="flip";
+  document.getElementById("toggleMode").textContent="Switch to Scroll";
 }
 
-document.getElementById("toggleMode").addEventListener("click", ()=>{
-  if (mode === "scroll") mountFlip();
-  else mountScroll();
+document.getElementById("toggleMode").addEventListener("click",()=>{
+  if(mode==="scroll") mountFlip(); else mountScroll();
 });
 
 (async function init(){
   pageURLs = await discoverPages();
-  if (pageURLs.length === 0){
-    document.querySelector(".wrap").innerHTML = "<div style='color:#ccc'>No pages found.</div>";
+  if(pageURLs.length===0){
+    document.querySelector(".wrap").innerHTML =
+      "<div style='color:#ccc;text-align:center;'>No pages found.</div>";
     return;
   }
-  mountScroll(); // default view
+  mountScroll();
 })();
 </script>
 
 </body>
 </html>
-
-
-
-
 
 
 
