--- a/vol2.html
+++ b/vol2.html
@@ -13,23 +13,18 @@
     font-family: system-ui, -apple-system, "Inter", sans-serif;
     color: #fff;
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: flex; flex-direction: column; align-items: center;
     cursor: url("camel_cursor.svg") 16 16, auto;
   }
 
   header {
     position: sticky; top: 0; z-index: 5;
-    width: 100%;
+    width: 100%; padding: .75rem 1rem;
     background: rgba(0,0,0,0.6);
     backdrop-filter: blur(6px);
     border-bottom: 1px solid rgba(255,255,255,0.06);
-    padding: .75rem 1rem;
     display: flex; gap: .75rem; justify-content: center; flex-wrap: wrap;
   }
-
-  .title { font-weight: 600; }
 
   .btn {
     border: 1px solid rgba(255,255,255,0.15);
@@ -38,36 +33,19 @@
     padding: .45rem .7rem;
     border-radius: 8px;
     font-size: .85rem;
-    cursor: pointer;
-    text-decoration: none;
+    cursor: inherit;
   }
 
-  .wrap {
-    width: 100%;
-    max-width: 900px;
-    padding: 1rem;
-  }
+  .wrap { width: 100%; max-width: 900px; padding: 1rem; }
 
-  /* Scroll mode */
-  #scrollReader {
-    width: 100%;
-    max-width: 900px;
-    display: none;
-  }
   #scrollReader img {
-    width: 100%;
-    height: auto;
-    display: block;
-    background: #111;
+    width: 100%; border-radius: 10px;
     margin-bottom: .75rem;
-    border-radius: 10px;
     box-shadow: 0 20px 60px rgba(0,0,0,0.5);
   }
 
-  /* Flipbook */
   #flipbook {
-    width: 900px;
-    height: 600px;
+    width: 900px; height: 600px;
     background: #1a1a1a;
     border-radius: 12px;
     box-shadow: 0 40px 120px rgba(0,0,0,0.9);
@@ -75,49 +53,34 @@
     display: none;
     margin: 0 auto;
   }
+
   #flipbook .page {
-    width: 450px;
-    height: 600px;
+    width: 450px; height: 600px;
     background-size: cover;
     background-position: center;
   }
 
-  /* ⭐ NEW — Tucked effect on first page */
+  /* ⭐ DOG-EAR */
   #flipbook .page:first-child {
     transform-origin: top right;
-    transform: rotateY(-10deg) translateX(-6px);
-    box-shadow: -15px 0 30px rgba(0,0,0,0.4);
+    transform: rotateY(-24deg) translateX(-12px);
+    box-shadow: -30px 0 50px rgba(0,0,0,0.55);
+    animation: dogear 1s ease-out;
   }
 
-  /* ⭐ OPTIONAL tiny drag hint (DISABLED by default) */
-  /*
-  #dragHint {
-    position: absolute;
-    top: 8px;
-    right: 12px;
-    color: #fff;
-    font-size: 0.75rem;
-    opacity: 0.6;
-    pointer-events: none;
+  @keyframes dogear {
+    0% { transform: rotateY(-45deg) translateX(-18px); }
+    100% { transform: rotateY(-24deg) translateX(-12px); }
   }
-  */
 
   footer {
-    text-align: center;
-    color: #ccc;
-    padding: 2rem 1rem;
-    font-size: .85rem;
+    text-align:center; color:#ccc;
+    padding:2rem 1rem; font-size:.85rem;
   }
 
-  @media (max-width: 950px) {
-    #flipbook {
-      width: 100%;
-      height: calc(100vw * (600/900));
-    }
-    #flipbook .page {
-      width: 50%;
-      height: 100%;
-    }
+  @media (max-width:950px){
+    #flipbook{width:100%; height:calc(100vw*(600/900));}
+    #flipbook .page{width:50%; height:100%;}
   }
 </style>
 
@@ -137,38 +100,35 @@
 <div class="wrap">
   <div id="scrollReader"></div>
   <div id="flipbook"></div>
-
-  <!-- ⭐ OPTIONAL: drag hint -->
-  <!-- <div id="dragHint">⇱ drag</div> -->
 </div>
 
 <footer>
   If all is black, wait for loading 😉<br><br>
-  Tip: scroll mode is easiest on mobile.
+  Scroll mode easiest on mobile.
 </footer>
 
 <script>
-const FOLDER = "pages2/";
-const PREFIX = "booklet2-";
-const SUFFIX = "-1.jpg";
-const MAX_PAGES = 300;
+const FOLDER="pages2/";
+const PREFIX="booklet2-";
+const SUFFIX="-1.jpg";
+const MAX_PAGES=300;
 
-let pageURLs = [];
-let mode = "scroll";
+let pageURLs=[];
+let mode="scroll";
 
 function imgExists(url){
   return new Promise(resolve=>{
-    const img = new Image();
-    img.onload = ()=>resolve(true);
-    img.onerror = ()=>resolve(false);
-    img.src = url + (window.location.hostname.endsWith("github.io") ? "" : ("?v=" + Date.now()));
+    const img=new Image();
+    img.onload=()=>resolve(true);
+    img.onerror=()=>resolve(false);
+    img.src=url;
   });
 }
 
 async function discoverPages(){
-  const urls = [];
-  for(let i = 1; i < MAX_PAGES; i++){
-    const url = `${FOLDER}${PREFIX}${i}${SUFFIX}`;
+  const urls=[];
+  for(let i=1;i<MAX_PAGES;i++){
+    const url=`${FOLDER}${PREFIX}${i}${SUFFIX}`;
     if(await imgExists(url)) urls.push(url);
     else break;
   }
@@ -176,87 +136,71 @@ async function discoverPages(){
 }
 
 function mountScroll(){
-  const scroll = document.getElementById("scrollReader");
-  const flip = document.getElementById("flipbook");
-
-  scroll.innerHTML = "";
-  scroll.style.display = "block";
-  flip.style.display = "none";
+  const s=document.getElementById("scrollReader");
+  const f=document.getElementById("flipbook");
+  s.innerHTML=""; s.style.display="block"; f.style.display="none";
 
   pageURLs.forEach(src=>{
-    const img = document.createElement("img");
-    img.src = src;
-    scroll.appendChild(img);
+    const img=document.createElement("img");
+    img.src=src;
+    s.appendChild(img);
   });
 
-  mode = "scroll";
-  document.getElementById("toggleMode").textContent = "Switch to Flip";
+  mode="scroll";
+  document.getElementById("toggleMode").textContent="Switch to Flip";
 }
 
 function mountFlip(){
-  const scroll = document.getElementById("scrollReader");
-  const flip = document.getElementById("flipbook");
-
-  scroll.style.display = "none";
-  flip.innerHTML = "";
+  const s=document.getElementById("scrollReader");
+  const f=document.getElementById("flipbook");
+  s.style.display="none"; f.innerHTML="";
 
   pageURLs.forEach(src=>{
-    const div = document.createElement("div");
-    div.className = "page";
-    div.style.backgroundImage = `url('${src}')`;
-    flip.appendChild(div);
+    const d=document.createElement("div");
+    d.className="page";
+    d.style.backgroundImage=`url('${src}')`;
+    f.appendChild(d);
   });
 
-  flip.style.display = "block";
+  f.style.display="block";
 
-  const $flip = $("#flipbook");
-  try { if ($flip.data("initialized")) $flip.turn("destroy"); } catch(e){}
+  const $f=$("#flipbook");
+  try{ if($f.data("initialized")) $f.turn("destroy"); }catch(e){}
 
   $("#flipbook").turn({
-    width: 900,
-    height: 600,
-    autoCenter: true,
-    display: window.matchMedia('(max-width: 950px)').matches ? "single" : "double"
-  }).data("initialized", true);
+    width:900, height:600, autoCenter:true,
+    display:window.matchMedia('(max-width:950px)').matches?"single":"double"
+  }).data("initialized",true);
 
-  /* ⭐ NEW — remove the tuck after flipbook initializes */
-  setTimeout(() => {
-    const firstPage = document.querySelector("#flipbook .page:first-child");
-    if (firstPage) {
-      firstPage.style.transform = "";
-      firstPage.style.boxShadow = "";
+  setTimeout(()=>{
+    const first=document.querySelector("#flipbook .page:first-child");
+    if(first){
+      first.style.transform="";
+      first.style.boxShadow="";
+      first.style.animation="";
     }
-  }, 600);
+  },900);
 
-  mode = "flip";
-  document.getElementById("toggleMode").textContent = "Switch to Scroll";
+  mode="flip";
+  document.getElementById("toggleMode").textContent="Switch to Scroll";
 }
 
-document.getElementById("toggleMode").addEventListener("click", ()=>{
-  if(mode === "scroll") mountFlip();
-  else mountScroll();
+document.getElementById("toggleMode").addEventListener("click",()=>{
+  if(mode==="scroll") mountFlip(); else mountScroll();
 });
 
 (async function init(){
   pageURLs = await discoverPages();
-  if(pageURLs.length === 0){
-    document.querySelector(".wrap").innerHTML =
-      "<div style='color:#ccc;text-align:center;padding:1rem'>No pages found.</div>";
+  if(pageURLs.length===0){
+    document.querySelector(".wrap").innerHTML="<div style='color:#ccc'>No pages found.</div>";
     return;
   }
-  mountScroll(); // default
+  mountScroll();
 })();
 </script>
 
 </body>
 </html>
-
-
-
-
-
-
-
 
 
 
