--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <title>PaleZine - Rumman</title>
 
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="favicon.png" />
+<link rel="icon" type="image/png" href="favicon.png">
+<link rel="icon" type="image/svg+xml" href="favicon.svg">
 
 <style>
   body {
@@ -19,7 +20,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    cursor: url("camel_cursor.svg") 16 16, auto;  /* 🐪 GLOBAL CAMEL CURSOR */
+
+    /* GLOBAL CAMEL CURSOR */
+    cursor: url("camel_cursor.ong") 16 16, auto;
   }
 
   h1 { margin-bottom: 1rem; font-size: 2rem; }
@@ -55,7 +58,6 @@
     text-decoration: none;
     border-bottom: 1px solid #aaaaaa;
     padding-bottom: 2px;
-    text-shadow: 0 0 4px rgba(255,255,255,0.25);
   }
 </style>
 </head>
@@ -82,36 +84,6 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-
 
 
 
