--- a/vol1.html
+++ b/vol1.html
@@ -13,10 +13,12 @@
     font-family: system-ui, -apple-system, "Inter", sans-serif;
     color: #fff;
     min-height: 100vh;
+
     display: flex;
     flex-direction: column;
     align-items: center;
-    cursor: url("camel_cursor.svg") 16 16, auto; /* GLOBAL CAMEL CURSOR */
+
+    cursor: url("camel_cursor.ong") 16 16, auto; /* GLOBAL CAMEL CURSOR */
   }
 
   header {
@@ -25,7 +27,7 @@
     background: rgba(0,0,0,0.6);
     backdrop-filter: blur(6px);
     border-bottom: 1px solid rgba(255,255,255,0.06);
-    display: flex; gap: .75rem; justify-content: center; flex-wrap: wrap;
+    display: flex; gap: .75rem; justify-content: center;
   }
 
   .btn {
@@ -41,8 +43,6 @@
 
   .wrap { width: 100%; max-width: 900px; padding: 1rem; }
 
-  /* Scroll Mode */
-  #scrollReader { display: none; }
   #scrollReader img {
     width: 100%; height: auto; display: block;
     background: #111; margin-bottom: .75rem;
@@ -50,45 +50,46 @@
     box-shadow: 0 20px 60px rgba(0,0,0,0.5);
   }
 
-  /* Flipbook */
+  /* FLIPBOOK */
   #flipbook {
     width: 900px; height: 600px;
     background: #1a1a1a;
     border-radius: 12px;
-    box-shadow: 0 40px 120px rgba(0,0,0,0.9);
     overflow: hidden;
     display: none;
     margin: 0 auto;
+    position: relative;
   }
 
   #flipbook .page {
     width: 450px; height: 600px;
     background-size: cover;
     background-position: center;
+    position: relative;
   }
 
-  /* ⭐ DOG-EAR FOLD ANIMATION */
-  #flipbook .page:first-child {
-    transform-origin: top right;
-    transform: rotateY(-24deg) translateX(-12px);
-    box-shadow: -30px 0 50px rgba(0,0,0,0.55);
-    animation: dogear 1s ease-out;
-  }
-
-  @keyframes dogear {
-    0% { transform: rotateY(-45deg) translateX(-18px); }
-    100% { transform: rotateY(-24deg) translateX(-12px); }
+  /* ⭐ CLEAN DOG-EAR OVERLAY */
+  #flipbook .page:first-child::after {
+    content: "";
+    position: absolute;
+    top: 0; right: 0;
+    width: 0; height: 0;
+    border-top: 70px solid rgba(255,255,255,0.8);
+    border-left: 70px solid transparent;
+    box-shadow: -5px 5px 15px rgba(0,0,0,0.4);
+    z-index: 20;
   }
 
   footer {
-    text-align: center; color: #ccc;
-    padding: 2rem 1rem; font-size: .85rem;
+    text-align:center; color:#ccc;
+    padding:2rem 1rem; font-size:.85rem;
   }
 
-  @media (max-width: 950px) {
-    #flipbook { width: 100%; height: calc(100vw * (600/900)); }
-    #flipbook .page { width: 50%; height: 100%; }
+  @media (max-width:950px){
+    #flipbook{width:100%; height:calc(100vw*(600/900));}
+    #flipbook .page{width:50%; height:100%;}
   }
+
 </style>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -111,49 +112,45 @@
 
 <footer>
   If all is black, wait for loading 😉<br><br>
-  Tip: scroll mode is easiest on mobile.
 </footer>
 
 <script>
-const FOLDER = "pages/";
-const PREFIX = "booklet-page-";
-const PAD = 3;
-const EXT = ".jpg";
-const MAX_PAGES = 200;
+const FOLDER="pages/";
+const PREFIX="booklet-page-";
+const PAD=3;
+const EXT=".jpg";
+const MAX=200;
 
-let pageURLs = [];
-let mode = "scroll";
+let pages=[], mode="scroll";
 
 function pad(n){ return String(n).padStart(PAD,"0"); }
 
-function imgExists(url){
-  return new Promise(resolve=>{
-    const img = new Image();
-    img.onload = ()=>resolve(true);
-    img.onerror = ()=>resolve(false);
-    img.src = url;
+function exists(url){
+  return new Promise(r=>{
+    const i=new Image();
+    i.onload=()=>r(true); i.onerror=()=>r(false); i.src=url;
   });
 }
 
-async function discoverPages(){
-  const urls = [];
-  for(let i=1;i<MAX_PAGES;i++){
+async function discover(){
+  const out=[];
+  for(let i=1;i<MAX;i++){
     const url=`${FOLDER}${PREFIX}${pad(i)}${EXT}`;
-    if(await imgExists(url)) urls.push(url);
+    if(await exists(url)) out.push(url);
     else break;
   }
-  return urls;
+  return out;
 }
 
-function mountScroll(){
+function scrollMode(){
+  document.getElementById("flipbook").style.display="none";
   const s=document.getElementById("scrollReader");
-  const f=document.getElementById("flipbook");
+  s.innerHTML="";
+  s.style.display="block";
 
-  s.innerHTML=""; s.style.display="block"; f.style.display="none";
-
-  pageURLs.forEach(src=>{
+  pages.forEach(u=>{
     const img=document.createElement("img");
-    img.src=src;
+    img.src=u;
     s.appendChild(img);
   });
 
@@ -161,60 +158,43 @@ function mountScroll(){
   document.getElementById("toggleMode").textContent="Switch to Flip";
 }
 
-function mountFlip(){
+function flipMode(){
   const s=document.getElementById("scrollReader");
   const f=document.getElementById("flipbook");
 
-  s.style.display="none"; f.innerHTML="";
+  s.style.display="none";
+  f.innerHTML="";
 
-  pageURLs.forEach(src=>{
-    const d=document.createElement("div");
-    d.className="page";
-    d.style.backgroundImage=`url('${src}')`;
-    f.appendChild(d);
+  pages.forEach(u=>{
+    const p=document.createElement("div");
+    p.className="page";
+    p.style.backgroundImage=`url('${u}')`;
+    f.appendChild(p);
   });
 
   f.style.display="block";
 
-  const $f=$("#flipbook");
-  try{ if($f.data("initialized")) $f.turn("destroy"); }catch(e){}
+  const fb=$("#flipbook");
+  try{ if(fb.data("init")) fb.turn("destroy"); }catch(e){}
 
-  $("#flipbook").turn({
+  fb.turn({
     width:900, height:600, autoCenter:true,
     display:window.matchMedia('(max-width:950px)').matches?"single":"double"
-  }).data("initialized",true);
-
-  /* REMOVE dog-ear so normal flipping resumes */
-  setTimeout(()=>{
-    const first=document.querySelector("#flipbook .page:first-child");
-    if(first){
-      first.style.transform="";
-      first.style.boxShadow="";
-      first.style.animation="";
-    }
-  },900);
+  }).data("init",true);
 
   mode="flip";
   document.getElementById("toggleMode").textContent="Switch to Scroll";
 }
 
 document.getElementById("toggleMode").addEventListener("click",()=>{
-  if(mode==="scroll") mountFlip(); else mountScroll();
+  if(mode==="scroll") flipMode(); else scrollMode();
 });
 
-(async function init(){
-  pageURLs = await discoverPages();
-  if(pageURLs.length===0){
-    document.querySelector(".wrap").innerHTML =
-      "<div style='color:#ccc;text-align:center;'>No pages found.</div>";
-    return;
-  }
-  mountScroll();
+(async function(){
+  pages=await discover();
+  scrollMode();
 })();
 </script>
 
 </body>
 </html>
-
-
-
