--- a/vol2.html
+++ b/vol2.html
@@ -8,69 +8,69 @@
 <style>
   * { box-sizing: border-box; }
   body {
-    margin: 0;
+    margin:0;
     background: radial-gradient(circle at 20% 20%, #2a2a2a 0%, #000 80%);
     font-family: system-ui, -apple-system, "Inter", sans-serif;
-    color: #fff;
-    min-height: 100vh;
-    display: flex; flex-direction: column; align-items: center;
-    cursor: url("camel_cursor.svg") 16 16, auto;
+    color:#fff;
+    min-height:100vh;
+    display:flex; flex-direction:column; align-items:center;
+    cursor:url("camel_cursor.ong") 16 16, auto;
   }
 
   header {
-    position: sticky; top: 0; z-index: 5;
-    width: 100%; padding: .75rem 1rem;
-    background: rgba(0,0,0,0.6);
-    backdrop-filter: blur(6px);
-    border-bottom: 1px solid rgba(255,255,255,0.06);
-    display: flex; gap: .75rem; justify-content: center; flex-wrap: wrap;
+    position:sticky; top:0; z-index:5;
+    width:100%; padding:.75rem 1rem;
+    background:rgba(0,0,0,0.6);
+    border-bottom:1px solid rgba(255,255,255,0.06);
+    display:flex; gap:.75rem; justify-content:center;
   }
 
   .btn {
-    border: 1px solid rgba(255,255,255,0.15);
-    background: rgba(255,255,255,0.06);
-    color: #e9f3ff;
-    padding: .45rem .7rem;
-    border-radius: 8px;
-    font-size: .85rem;
-    cursor: inherit;
+    border:1px solid rgba(255,255,255,0.15);
+    background:rgba(255,255,255,0.06);
+    color:#e9f3ff;
+    padding:.45rem .7rem;
+    border-radius:8px;
+    cursor:inherit;
+    font-size:.85rem;
+    text-decoration:none;
   }
 
-  .wrap { width: 100%; max-width: 900px; padding: 1rem; }
+  .wrap { width:100%; max-width:900px; padding:1rem; }
 
   #scrollReader img {
-    width: 100%; border-radius: 10px;
-    margin-bottom: .75rem;
-    box-shadow: 0 20px 60px rgba(0,0,0,0.5);
+    width:100%; border-radius:10px;
+    margin-bottom:.75rem;
+    box-shadow:0 20px 60px rgba(0,0,0,0.5);
   }
 
+  /* Flipbook */
   #flipbook {
-    width: 900px; height: 600px;
-    background: #1a1a1a;
-    border-radius: 12px;
-    box-shadow: 0 40px 120px rgba(0,0,0,0.9);
-    overflow: hidden;
-    display: none;
-    margin: 0 auto;
+    width:900px; height:600px;
+    background:#1a1a1a;
+    border-radius:12px;
+    overflow:hidden;
+    display:none;
+    margin:0 auto;
   }
 
   #flipbook .page {
-    width: 450px; height: 600px;
-    background-size: cover;
-    background-position: center;
+    width:450px; height:600px;
+    background-size:cover;
+    background-position:center;
+    position:relative;
   }
 
-  /* ⭐ DOG-EAR */
-  #flipbook .page:first-child {
-    transform-origin: top right;
-    transform: rotateY(-24deg) translateX(-12px);
-    box-shadow: -30px 0 50px rgba(0,0,0,0.55);
-    animation: dogear 1s ease-out;
-  }
-
-  @keyframes dogear {
-    0% { transform: rotateY(-45deg) translateX(-18px); }
-    100% { transform: rotateY(-24deg) translateX(-12px); }
+  /* ⭐ SAME DOG-EAR CORNER */
+  #flipbook .page:first-child::after {
+    content:"";
+    position:absolute;
+    top:0; right:0;
+    width:0; height:0;
+    border-top:70px solid rgba(255,255,255,0.8);
+    border-left:70px solid transparent;
+    box-shadow:-5px 5px 15px rgba(0,0,0,0.4);
+    z-index:20;
   }
 
   footer {
@@ -78,7 +78,7 @@
     padding:2rem 1rem; font-size:.85rem;
   }
 
-  @media (max-width:950px){
+  @media(max-width:950px){
     #flipbook{width:100%; height:calc(100vw*(600/900));}
     #flipbook .page{width:50%; height:100%;}
   }
@@ -94,7 +94,7 @@
   <span class="title">PaleZine — Volume 2</span>
   <button id="toggleMode" class="btn">Switch to Flip</button>
   <a href="booklet2.pdf" class="btn" download>Download PDF</a>
-  <a href="index.html" class="btn">Back to Volumes</a>
+  <a href="index.html" class="btn">Back</a>
 </header>
 
 <div class="wrap">
@@ -103,46 +103,45 @@
 </div>
 
 <footer>
-  If all is black, wait for loading 😉<br><br>
-  Scroll mode easiest on mobile.
+  If all is black, wait a moment 😉
 </footer>
 
 <script>
 const FOLDER="pages2/";
 const PREFIX="booklet2-";
 const SUFFIX="-1.jpg";
-const MAX_PAGES=300;
+const MAX=300;
 
-let pageURLs=[];
+let pages=[];
 let mode="scroll";
 
-function imgExists(url){
-  return new Promise(resolve=>{
+function exists(url){
+  return new Promise(res=>{
     const img=new Image();
-    img.onload=()=>resolve(true);
-    img.onerror=()=>resolve(false);
+    img.onload=()=>res(true);
+    img.onerror=()=>res(false);
     img.src=url;
   });
 }
 
-async function discoverPages(){
-  const urls=[];
-  for(let i=1;i<MAX_PAGES;i++){
-    const url=`${FOLDER}${PREFIX}${i}${SUFFIX}`;
-    if(await imgExists(url)) urls.push(url);
+async function discover(){
+  const arr=[];
+  for(let i=1;i<MAX;i++){
+    const u=`${FOLDER}${PREFIX}${i}${SUFFIX}`;
+    if(await exists(u)) arr.push(u);
     else break;
   }
-  return urls;
+  return arr;
 }
 
-function mountScroll(){
+function scrollMode(){
   const s=document.getElementById("scrollReader");
   const f=document.getElementById("flipbook");
   s.innerHTML=""; s.style.display="block"; f.style.display="none";
 
-  pageURLs.forEach(src=>{
+  pages.forEach(u=>{
     const img=document.createElement("img");
-    img.src=src;
+    img.src=u;
     s.appendChild(img);
   });
 
@@ -150,57 +149,46 @@ function mountScroll(){
   document.getElementById("toggleMode").textContent="Switch to Flip";
 }
 
-function mountFlip(){
+function flipMode(){
   const s=document.getElementById("scrollReader");
   const f=document.getElementById("flipbook");
   s.style.display="none"; f.innerHTML="";
 
-  pageURLs.forEach(src=>{
-    const d=document.createElement("div");
-    d.className="page";
-    d.style.backgroundImage=`url('${src}')`;
-    f.appendChild(d);
+  pages.forEach(u=>{
+    const p=document.createElement("div");
+    p.className="page";
+    p.style.backgroundImage=`url('${u}')`;
+    f.appendChild(p);
   });
 
   f.style.display="block";
 
-  const $f=$("#flipbook");
-  try{ if($f.data("initialized")) $f.turn("destroy"); }catch(e){}
+  const fb=$("#flipbook");
+  try{ if(fb.data("init")) fb.turn("destroy"); }catch(e){}
 
-  $("#flipbook").turn({
+  fb.turn({
     width:900, height:600, autoCenter:true,
     display:window.matchMedia('(max-width:950px)').matches?"single":"double"
-  }).data("initialized",true);
-
-  setTimeout(()=>{
-    const first=document.querySelector("#flipbook .page:first-child");
-    if(first){
-      first.style.transform="";
-      first.style.boxShadow="";
-      first.style.animation="";
-    }
-  },900);
+  }).data("init",true);
 
   mode="flip";
   document.getElementById("toggleMode").textContent="Switch to Scroll";
 }
 
 document.getElementById("toggleMode").addEventListener("click",()=>{
-  if(mode==="scroll") mountFlip(); else mountScroll();
+  if(mode==="scroll") flipMode(); else scrollMode();
 });
 
-(async function init(){
-  pageURLs = await discoverPages();
-  if(pageURLs.length===0){
-    document.querySelector(".wrap").innerHTML="<div style='color:#ccc'>No pages found.</div>";
-    return;
-  }
-  mountScroll();
+(async function(){
+  pages=await discover();
+  scrollMode();
 })();
 </script>
 
 </body>
 </html>
+
+
 
 
 
