--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     align-items: center;
 
     /* GLOBAL CAMEL CURSOR */
-    cursor: url("camel_cursor.ong") 16 16, auto;
+    cursor: url("camel_cursor.png") 16 16, auto;
   }
 
   h1 { margin-bottom: 1rem; font-size: 2rem; }
@@ -84,6 +84,7 @@
 
 </body>
 </html>
+
 
 
 
