--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="favicon.png">
-<link rel="icon" type="image/svg+xml" href="favicon.svg">
+<link rel="icon" type="image/svg" href="favicon.svg">
 
 <style>
   body {
@@ -84,6 +84,7 @@
 
 </body>
 </html>
+
 
 
 
