--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>PaleZine - Rumman</title>
 
-<!-- Correct favicon -->
+<!-- Working favicon -->
 <link rel="icon" type="image/png" href="favicon.png">
 
 <style>
@@ -20,7 +20,7 @@
     flex-direction: column;
     align-items: center;
 
-    /* GLOBAL CAMEL CURSOR — PNG first, auto fallback */
+    /* GLOBAL CAMEL CURSOR — this will work as soon as you upload a 32×32 PNG */
     cursor: url("camel_cursor.png") 4 4, auto;
   }
 
@@ -72,11 +72,13 @@
 
 <div class="grid">
   <a href="vol2.html" class="item">
-    <img src="pages2/booklet2-1-1.jpg" class="cover"><h2>Volume 2</h2>
+    <img src="pages2/booklet2-1-1.jpg" class="cover">
+    <h2>Volume 2</h2>
   </a>
 
   <a href="vol1.html" class="item">
-    <img src="pages/booklet-page-001.jpg" class="cover"><h2>Volume 1</h2>
+    <img src="pages/booklet-page-001.jpg" class="cover">
+    <h2>Volume 1</h2>
   </a>
 </div>
 
